Bug 1552366 - Add placeholder cards, wrapping buttons and bug fixes to Activity Stream r=k88hudson
Differential Revision: https://phabricator.services.mozilla.com/D31549

UltraBlame original commit: c7a169c8670c79253241ed244a51e0927346bf15

--- a/browser/components/newtab/css/activity-stream-linux.css
+++ b/browser/components/newtab/css/activity-stream-linux.css
@@ -24723,6 +24723,40 @@ hidden
 ;
 color
 :
+#
+737373
+;
+margin
+:
+4px
+0
+8px
+;
+}
+[
+lwt
+-
+newtab
+-
+brighttext
+]
+.
+ds
+-
+list
+-
+item
+.
+ds
+-
+list
+-
+item
+-
+excerpt
+{
+color
+:
 rgba
 (
 249
@@ -24732,12 +24766,6 @@ rgba
 .
 8
 )
-;
-margin
-:
-4px
-0
-8px
 ;
 }
 .
@@ -29350,6 +29378,122 @@ vertical
 align
 :
 middle
+;
+}
+body
+:
+not
+(
+[
+lwt
+-
+newtab
+-
+brighttext
+]
+)
+.
+icon
+-
+dark
+-
+theme
+body
+:
+not
+(
+[
+lwt
+-
+newtab
+-
+brighttext
+]
+)
+.
+icon
+.
+icon
+-
+dark
+-
+theme
+body
+:
+not
+(
+[
+lwt
+-
+newtab
+-
+brighttext
+]
+)
+.
+scene2Icon
+.
+icon
+-
+dark
+-
+theme
+{
+display
+:
+none
+;
+}
+body
+[
+lwt
+-
+newtab
+-
+brighttext
+]
+.
+icon
+-
+light
+-
+theme
+body
+[
+lwt
+-
+newtab
+-
+brighttext
+]
+.
+icon
+.
+icon
+-
+light
+-
+theme
+body
+[
+lwt
+-
+newtab
+-
+brighttext
+]
+.
+scene2Icon
+.
+icon
+-
+light
+-
+theme
+{
+display
+:
+none
 ;
 }
 .
@@ -37311,9 +37455,9 @@ border
 :
 0
 ;
-height
+margin
 :
-30px
+14px
 ;
 min
 -
@@ -37324,8 +37468,16 @@ width
 ;
 padding
 :
-0
+6px
 14px
+;
+white
+-
+space
+:
+pre
+-
+wrap
 ;
 }
 .
@@ -37412,17 +37564,13 @@ trailheadCard
 .
 onboardingButtonContainer
 {
-height
-:
-60px
-;
 position
 :
 absolute
 ;
 bottom
 :
-0
+16px
 ;
 left
 :
