--- a/browser/components/newtab/css/activity-stream-mac.css
+++ b/browser/components/newtab/css/activity-stream-mac.css
@@ -24743,6 +24743,40 @@ hidden
 ;
 color
 :
+#
+737373
+;
+margin
+:
+4px
+0
+8px
+;
+}
+[
+lwt
+-
+newtab
+-
+brighttext
+]
+.
+ds
+-
+list
+-
+item
+.
+ds
+-
+list
+-
+item
+-
+excerpt
+{
+color
+:
 rgba
 (
 249
@@ -24752,12 +24786,6 @@ rgba
 .
 8
 )
-;
-margin
-:
-4px
-0
-8px
 ;
 }
 .
@@ -29370,6 +29398,122 @@ vertical
 align
 :
 middle
+;
+}
+body
+:
+not
+(
+[
+lwt
+-
+newtab
+-
+brighttext
+]
+)
+.
+icon
+-
+dark
+-
+theme
+body
+:
+not
+(
+[
+lwt
+-
+newtab
+-
+brighttext
+]
+)
+.
+icon
+.
+icon
+-
+dark
+-
+theme
+body
+:
+not
+(
+[
+lwt
+-
+newtab
+-
+brighttext
+]
+)
+.
+scene2Icon
+.
+icon
+-
+dark
+-
+theme
+{
+display
+:
+none
+;
+}
+body
+[
+lwt
+-
+newtab
+-
+brighttext
+]
+.
+icon
+-
+light
+-
+theme
+body
+[
+lwt
+-
+newtab
+-
+brighttext
+]
+.
+icon
+.
+icon
+-
+light
+-
+theme
+body
+[
+lwt
+-
+newtab
+-
+brighttext
+]
+.
+scene2Icon
+.
+icon
+-
+light
+-
+theme
+{
+display
+:
+none
 ;
 }
 .
@@ -37331,9 +37475,9 @@ border
 :
 0
 ;
-height
+margin
 :
-30px
+14px
 ;
 min
 -
@@ -37344,8 +37488,16 @@ width
 ;
 padding
 :
-0
+6px
 14px
+;
+white
+-
+space
+:
+pre
+-
+wrap
 ;
 }
 .
@@ -37432,17 +37584,13 @@ trailheadCard
 .
 onboardingButtonContainer
 {
-height
-:
-60px
-;
 position
 :
 absolute
 ;
 bottom
 :
-0
+16px
 ;
 left
 :
